# Event-Driven-Backtesting-Engine

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
core/: backtest_engine.py  event_queue.py
data/: csv_data_handler.py  data_handler.py
events/: events.py
metrics/: plots.py
src/data/: csv_data_handler.py  sample_prices.csv
src/events/: event.py  event_types.py
